<resources>
    <string name="app_name">My Food</string>
    <string name="str_login">Login</string>
    <string name="str_create_an_account">Create an Account</string>
    <string name="str_don_t_want_login">Don\'t want login?</string>
    <string name="str_skip">Skip</string>
    <string name="str_th">TH</string>
    <string name="str_en">EN</string>
    <string name="str_add_your_details_to_login">Add your details to login</string>
    <string name="str_your_email">Your Email</string>
    <string name="str_password">Password</string>
    <string name="str_forget_your_password">Forget your password?</string>
    <string name="str_don_t_have_an_account">Don\'t have an Account?</string>
    <string name="str_sign_up">Sign Up</string>
    <string name="str_add_your_details_to_sign_up">Add your details to sign up</string>
    <string name="str_name">Name</string>
    <string name="str_email">Email</string>
    <string name="str_mobile_no">Mobile No</string>
    <string name="str_address">Address</string>
    <string name="str_confirm_password">Confirm Password</string>
    <string name="str_already_have_an_account">Already have an Account?</string>
    <string name="str_email_is_incorrect">Email is incorrect</string>
    <string name="str_password_is_incorrect">Password is incorrect</string>
    <string name="title_activity_food_detail">FoodDetailActivity</string>
</resources>